--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <img class="star" src="./images/icon-star.svg" alt="star icon" />
       <h1>How did we do?</h1>
       <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-      <ul id="selection-list">
-        <ol value="1">1</ol>
-        <ol value="2">2</ol>
-        <ol value="3">3</ol>
-        <ol value="4" class="selected">4</ol>
-        <ol value="5">5</ol>
-      </ul>
+      <ol id="selection-list">
+        <li value="1">1</li>
+        <li value="2">2</li>
+        <li value="3">3</li>
+        <li value="4" class="selected">4</li>
+        <li value="5">5</li>
+      </ol>
 
     <button id="submit-button">Submit</button>
     </div>
